--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "y",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://gitname.github.io/OtterCAD",
   "type": "module",
   "scripts": {
     "dev": "vite",
